name:          modbus-tcp
version:       0.6
cabal-version: >= 1.10
build-type:    Simple
stability:     experimental
author:        Roel van Dijk <roel@lambdacube.nl>, Tim Schwarte <tim@timschwarte.nl>
maintainer:    Roel van Dijk <roel@lambdacube.nl>
copyright:     2013–2017 Roel van Dijk, Tim Schwarte
license:       BSD3
license-file:  LICENSE
homepage:      https://github.com/roelvandijk/modbus-tcp
bug-reports:   https://github.com/roelvandijk/modbus-tcp/issues
category:      System
synopsis:      Communicate with Modbus devices over TCP
description:   Implements the Modbus TPC/IP protocol.

source-repository head
    type:     git
    location: git://github.com/roelvandijk/modbus-tcp.git

library
    hs-source-dirs: src
    default-language: Haskell2010
    ghc-options: -Wall

    build-depends:
        attoparsec        >= 0.13   && < 0.14
      , base              >= 4.9    && < 5
      , bytestring        >= 0.10.6 && < 0.11
      , exceptions        >= 0.8.3  && < 0.9
      , monad-batcher
      , mtl               >= 2.2.1  && < 3
      , transformers      >= 0.5.2  && < 0.6

    exposed-modules:
        Data.Range
        Network.Modbus.TCP

        Network.Modbus.TCP.Internal.Batch
        Network.Modbus.TCP.Internal.Protocol

test-suite test-modbus-tcp
    type: exitcode-stdio-1.0
    hs-source-dirs: test
    main-is: test.hs
    default-language: Haskell2010
    ghc-options: -Wall -O2
    build-depends:
        attoparsec        >= 0.13   && < 0.14
      , base              >= 4.9    && < 5
      , bytestring        >= 0.10.6 && < 0.11
      , modbus-tcp
      , QuickCheck        >= 2.8    && < 2.10
      , tasty             >= 0.11   && < 0.12
      , tasty-quickcheck  >= 0.8    && < 0.9
